fix flex extra aligning

--- a/client/body/body.less
+++ b/client/body/body.less
@@ -65,8 +65,8 @@ body {
 		height: 100%;
 		overflow: auto;
 		color: white;
-		display: flex;
-		justify-content: center;
+		// display: flex;
+		// justify-content: center;
 		a:link, a:visited, a:active, .underline {color: white; }
 		.content {
 			padding-bottom: 2em;
